tests/ui/pattern/no-match-tuple-variant-self-ctor.struct_.stderr
error[E0423]: cannot find value `S` in this scope
  --> $DIR/no-match-tuple-variant-self-ctor.rs:30:24
   |
LL |     struct S {}
   |     ----------- `S` defined here
...
LL |             let Self = S;
   |                        ^ help: use struct literal syntax instead: `S {}`
   |
   = note: a struct named `S` exists in another namespace

error[E0533]: expected unit struct, found self constructor `Self`
  --> $DIR/no-match-tuple-variant-self-ctor.rs:30:17
   |
LL |             let Self = S;
   |                 ^^^^ not a unit struct

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0533.
For more information about an error, try `rustc --explain E0423`.
